--- a/maipogrande/.vscode/settings.json
+++ b/maipogrande/.vscode/settings.json
@@ -1,3 +1,3 @@
 {
-    "python.pythonPath": "D:\\appz\\dev\\anaconda\\python.exe"
+    "python.pythonPath": "C:\\Users\\CayoArenas\\AppData\\Local\\Programs\\Python\\Python38-32\\python.exe"
 }
